# pong

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/texture/: pong_spritesheet.ron
config/: bindings.ron
src/: audio.rs  main.rs  pong.rs
src/systems/: bounce.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
