[package]
name = "pong"
version = "0.1.0"
authors = ["Jason Miller <contact@jasonmiller.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", rev = "c02079adf4079cd2a47f6da25b6707b11f1bbf83" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
