[package]
name = "pong"
version = "0.1.0"
authors = ["Jason Miller <contact@jasonmiller.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.13.2"

[target.x86_64-apple-darwin.dependencies]
objc = "=0.2.6"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
