[package]
name = "pong"
version = "0.1.0"
authors = ["Jason Miller <contact@jasonmiller.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]

[target.x86_64-apple-darwin.dependencies]
objc = "=0.2.6"

